test/corpus/accounts.txt
================================================================================
Simple account
================================================================================

2023-01-01 test
    expenses    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Hierarchical account with colons
================================================================================

2023-01-01 test
    expenses:food:lunch    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Account with numbers
================================================================================

2023-01-01 test
    account2023    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Account with underscores and hyphens
================================================================================

2023-01-01 test
    assets_checking-main    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Deep account hierarchy
================================================================================

2023-01-01 test
    assets:bank:checking:primary:account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))
