test/corpus/amounts.txt
================================================================================
Symbol before number
================================================================================

2023-01-01 test
    account    $100

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Number before commodity
================================================================================

2023-01-01 test
    account    100 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Negative symbol amount
================================================================================

2023-01-01 test
    account    -$50.25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Negative number amount
================================================================================

2023-01-01 test
    account    -100 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Number only amount
================================================================================

2023-01-01 test
    account    42.50

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
European currencies
================================================================================

2023-01-01 test
    account1    €15.50
    account2    £25.75

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Decimal with comma
================================================================================

2023-01-01 test
    account    1,234.56

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Thousands separators - comma style
================================================================================

2023-01-01 Large amounts
    assets:bank    1,234,567.89 USD
    expenses:big    -12,345.67 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Thousands separators - dot style European
================================================================================

2023-01-01 European format
    assets:eu    1.234.567,89 EUR
    expenses:eu    -12.345,67 EUR

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Pure decimal starting with dot
================================================================================

2023-01-01 Decimal only
    assets:fractional    .75 USD
    expenses:small    -.25 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Pure decimal starting with comma
================================================================================

2023-01-01 European decimal
    assets:fractional    ,75 EUR
    expenses:small    -,25 EUR

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Large numbers with multiple separators
================================================================================

2023-01-01 Large amounts
    assets:big1    1,000,000.50 USD
    assets:big2    12,345,678.99 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))
