test/corpus/basic.txt
================================================================================
Empty journal
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Simple transaction
================================================================================

2023-01-01 groceries
    expenses:food        $10
    assets:checking

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount))
    (posting
      (account))))

================================================================================
Transaction with status and code
================================================================================

2023-01-01 * (123) groceries from store
    expenses:food        $10
    assets:checking

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (description)
    (posting
      (account)
      (amount))
    (posting
      (account))))

================================================================================
Posting with comment
================================================================================

2023-01-01 groceries
    expenses:food        $10  ; lunch money
    assets:checking          ; main account

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount)
      (comment))
    (posting
      (account)
      (comment))))
