test/corpus/comments.txt
================================================================================
Comment line
================================================================================

; This is a comment line

--------------------------------------------------------------------------------

(source_file
  (comment_line))

================================================================================
Multiple comment lines
================================================================================

; First comment
; Second comment
; Third comment

--------------------------------------------------------------------------------

(source_file
  (comment_line)
  (comment_line)
  (comment_line))

================================================================================
Comment with posting
================================================================================

2023-01-01 test
    account    $10  ; inline comment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (comment))))

================================================================================
Multiple postings with comments
================================================================================

2023-01-01 test
    expenses:food    $10  ; lunch
    assets:cash     -$10  ; wallet

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (comment))
    (posting
      (account
        (account_name))
      (amount)
      (comment))))

================================================================================
Empty comment
================================================================================

2023-01-01 test
    account    $10  ;

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (comment))))

================================================================================
Comment without amount
================================================================================

2023-01-01 test
    expenses:food    $10
    assets:checking      ; main account

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (comment))))
