test/corpus/cost-price.txt
================================================================================
Unit price with @
================================================================================

2023-01-01 test
    assets:stocks    $1500 @ $150

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (cost_spec
        (amount)))))

================================================================================
Total price with @@
================================================================================

2023-01-01 test
    assets:stocks    $750 @@ $750

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (cost_spec
        (amount)))))

================================================================================
Cost spec with balance assertion
================================================================================

2023-01-01 test
    assets:stocks    $1500 @ $150 = $1500

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (cost_spec
        (amount))
      (balance_assertion
        (amount)))))

================================================================================
Cost spec with comment
================================================================================

2023-01-01 test
    assets:stocks    $1500 @ $150  ; stock purchase

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount)
      (cost_spec
        (amount))
      (comment))))
