test/corpus/dates.txt
================================================================================
Date with dashes
================================================================================

2023-01-01 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Date with slashes
================================================================================

2023/12/25 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Single digit month and day
================================================================================

2023-1-5 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Date with periods
================================================================================

2023.12.25 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Partial date with slashes
================================================================================

12/25 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Partial date with dashes
================================================================================

1-5 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Partial date with periods
================================================================================

12.31 test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Ancient date with 4+ digit year
================================================================================

1066-10-14 Battle of Hastings
    expenses:battle    100 GOLD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Far future date with extended year
================================================================================

9999-12-31 End of era
    expenses:celebration    500 CREDITS

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Very old date with slashes
================================================================================

0001/12/25 Ancient event
    assets:gold    1000 DENARII

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))
