test/corpus/transactions.txt
================================================================================
Transaction with only date
:skip
================================================================================

2023-01-01
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount))))

================================================================================
Transaction with status only
:skip
================================================================================

2023-01-01 *
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (posting
      (account)
      (amount))))

================================================================================
Transaction with code only
:skip
================================================================================

2023-01-01 (123)
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (posting
      (account)
      (amount))))

================================================================================
Transaction with status and code
:skip
================================================================================

2023-01-01 * (ABC123)
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (posting
      (account)
      (amount))))

================================================================================
Transaction with urgent status
:skip
================================================================================

2023-01-01 ! urgent payment
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (description)
    (posting
      (account)
      (amount))))

================================================================================
Transaction with empty code
:skip
================================================================================

2023-01-01 () test
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (description)
    (posting
      (account)
      (amount))))

================================================================================
Long description
:skip
================================================================================

2023-01-01 This is a very long transaction description with many words
    account    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount))))
